<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="amigosdevaro.com.epoc.MainActivity">

    <item android:id="@+id/action_exacerbacion"
        android:icon="@drawable/hospital2"
        app:showAsAction="always|withText"
        android:title="@string/exacerbacion"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_mis_medicamentos"
        android:icon="@drawable/pill_white"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/mis_medicamentos"/>
    <item android:id="@+id/action_acercade"
        android:orderInCategory="99"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="acerca de"/>
</menu>
